tests/compile_fail/test_cursormut_invariant.stderr
error: lifetime may not live long enough
 --> tests/compile_fail/test_cursormut_invariant.rs:6:5
  |
5 | pub fn bar<'c, 'a>(x: CursorMut<'c, &'static str, 3, 3>) -> CursorMut<'c, &'a str, 3, 3> {
  |                -- lifetime `'a` defined here
6 |     x
  |     ^ returning this value requires that `'a` must outlive `'static`
  |
  = note: requirement occurs because of the type `btreevec::CursorMut<'_, &str, 3_usize, 3_usize>`, which makes the generic argument `&str` invariant
  = note: the struct `btreevec::CursorMut<'a, T, B, C>` is invariant over the parameter `T`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
